[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12"

[target.aarch64-apple-darwin]
rustflags = [
	"-C",
	"link-arg=-fuse-ld=/nix/store/zr9psnv4mj1gbrvh70rv0l63kr998ksq-rust-stable-2024-04-09/lib/rustlib/aarch64-apple-darwin/bin/gcc-ld/ld64.lld",
]
